--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,335 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+
+:root{
+  /* Font Used/Specification */
+  --font-used: 'Josefin Sans', sans-serif;
+  --font-size: 18px;
+
+  /* Website Min and Max widht */
+  --min-width: 340px;
+  --max-width: 1440px;
+
+  /* Colors Used */
+  /* Primary */
+  --bright-blue: hsl(220, 98%, 61%);
+  /*--gradient: linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));*/
+  --gradient: linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+  /* Neutral */
+  --very-Light-Gray: hsl(0, 0%, 98%);
+  --very-Light-Grayish-Blue: hsl(236, 33%, 92%);
+  --light-Grayish-Blue: hsl(233, 11%, 84%);
+  --dark-Grayish-Blue: hsl(236, 9%, 61%);
+  --very-Dark-Grayish-Blue: hsl(235, 19%, 35%);
+  /* Dark */
+  --very-Dark-Blue: hsl(235, 21%, 11%);
+  --very-Dark-Desaturated-Blue: hsl(235, 24%, 19%);
+}
+*,
+*::before,
+*::after{
+  padding: 0; margin: 0;
+  box-sizing: border-box;
+}
+html, body, #root{
+  height: 100%; width: 100%;
+}
+body{
+  font-family: var(--font-used);
+  font-size: var(--font-size);
+  display: flex;
+  justify-content: center;
+  background-color: var(--very-Dark-Blue);
+}
+#root{
+  max-width: 1440px;
+  min-width: 350px;
+  position: relative;
+}
+button{
+  cursor: pointer;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Making the background */
+.darkBg{background-color: var(--very-Dark-Blue);}
+.lightBg{background-color: var(--very-Light-Gray);}
+
+.darkBg .for-background{background: url('./images/bg-desktop-dark.jpg');}
+.lightBg .for-background{background: url('./images/bg-desktop-light.jpg');}
+
+.for-background{
+  position: absolute;
+  width: 100%;
+  height: 300px;
+}
+
+/* Todo Container */
+.App{
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+}
+.todo-container{
+  margin: 50px 0px;
+  width: 100%;
+  max-width: 600px;
+  padding: 20px;
+  z-index: 2;
+}
+/*----------------------------*/
+
+/* Heading part */
+.logo-n-button{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--very-Light-Gray);
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+}
+.btn-light-dark{
+  background: none;
+  border: none;
+}
+/*--------------------------------*/
+
+/* Font Color for the text in Todo Application */
+.darkBg input,
+.darkBg .todo p
+{color: var(--very-Light-Grayish-Blue);}
+
+.lightBg input,
+.lightBg .todo p
+{color: var(--very-Dark-Desaturated-Blue);}
+/*-----------------------------------------*/
+
+/* Create Todo Part */
+.darkBg .create-todo,
+.darkBg .circle div,
+.darkBg .todo-info,
+.darkBg .todo-list{ background-color: var(--very-Dark-Desaturated-Blue);}
+.lightBg .create-todo,
+.lightBg .circle div,
+.lightBg .todo-info,
+.lightBg .todo-list{ background-color: var(--very-Light-Gray);}
+
+.create-todo{
+  margin-top: 2rem;
+  padding: 5px 1rem;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 1.2rem;
+  border-radius: 5px;
+}
+.circle{
+  height: 22px;
+  width: 22px;
+  padding: 2px;
+  border-radius: 50%;
+  background: var(--very-Dark-Grayish-Blue);
+}
+.circle:hover, .circle.img{
+  background: var(--gradient);
+}
+.circle div{
+  height: 18px; width: 18px;
+  border-radius: 50%;
+}
+
+input{
+  padding: 1rem 0px;
+  width: 100%;
+  font-size: 1rem;
+  background-color: transparent;
+  border: none;
+}
+input:focus{outline: none;}
+/*--------------------------*/
+
+/*Todo List*/
+.todo-list{
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.no-items-left{
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  color: var(--very-Light-Grayish-Blue);
+  border-bottom: 1px solid var(--very-Dark-Grayish-Blue);
+}
+.lightBg .no-items-left{
+  color: var(--very-Dark-Desaturated-Blue);
+}
+
+.todo {
+  position: relative;
+  padding: 1rem;
+  padding-right: 50px;
+  display: flex;
+  width: 100%;
+  justify-content: left;
+  align-items: center;
+  gap: 1.2rem;
+  border-bottom: 1px solid var(--very-Dark-Grayish-Blue);
+}
+
+.completed-todo p {
+  opacity: 0.7;
+  text-decoration: line-through;
+}
+
+.lightBg .todo, .lightBg .no-items-left{border-color: var(--light-Grayish-Blue);}
+
+.btn-status,.btn-remove{
+  background: none;
+  border: none;
+}
+.circle.img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-remove{
+  display: none;
+  position: absolute;
+  right: 20px;
+}
+.todo:hover .btn-remove{
+  display: block;
+}
+/*-------------------------*/
+
+/* Todo Info */
+.todo-info{
+  padding: 1rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.item-left{width: 100px;}
+.item-left, .info{
+  font-size: 0.9rem;
+  color: var(--very-Dark-Grayish-Blue);
+}
+.lightBg .item-left, .lightBg .info{
+  color: var(--dark-Grayish-Blue);
+}
+
+.todo-filter-btn{
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.todo-filter-btn button{font-weight: 700;}
+.todo-filter-btn button, .clear-completed{
+  background: none;
+  border: none;
+  font-size: 1rem;
+  color: var(--dark-Grayish-Blue);
+}
+.clear-completed{font-size: 0.9rem;}
+
+.lightBg .todo-filter-btn button, .lightBg .clear-completed{
+  color: var(--very-Dark-Grayish-Blue);
+}
+
+.lightBg .btn:hover{color: var(--very-Dark-Blue);}
+.darkBg .btn:hover{color: var(--very-Light-Grayish-Blue);}
+
+.lightBg .btn.active,
+.darkBg .btn.active,
+.active:hover{
+  color: var(--bright-blue);
+}
+/*----------------------------*/
+
+/* Box shadow in the box */
+.todo-list, .todo-info{
+  box-shadow: 0px 5px 10px rgba(47, 47, 47, 0.2);
+}
+.lightBg .todo-list
+.lightBg .todo-info{
+  box-shadow: 0px 5px 10px rgba(127, 127, 127, 0.2);
+}
+/*-----------------------*/
+
+/* Bottom Info */
+.info{
+  margin: 3rem 0px;
+  text-align: center;
+}
+/*-------------------*/
+
+
+/* For Smaller Screens */
+@media only screen and (max-width: 700px){
+  .todo-container{
+    max-width: 500px;
+  }
+  .todo-info{
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .todo-info .item-left{
+    order: 1;
+  }
+  .todo-info .todo-filter-btn{
+    order: 3;
+    width: 100%;
+    padding-top: 1rem;
+    border-top: 2px solid hsla(248, 98%, 61%, 0.2);
+  }
+  .todo-info .clear-completed{
+    order: 2;
+  }
+}
+@media screen and (max-width: 500px) {
+  body{
+    font-size: 14px;
+  }
+  .for-background{
+    height: 200px;
+    background-size: cover;
+  }
+  .todo-container{
+    padding: 10px 20px;
+  }
+  .create-todo, .todo-list{
+    margin-top: 1rem;
+  }
+  .create-todo input{
+    padding: 0.75rem 0px;
+  }
+  .todo{
+    padding: 0.75rem;
+  }
+  .info{
+    margin: 2rem 0px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .darkBg .for-background{
+    background: url('./images/bg-mobile-dark.jpg');
+    background-size: 100vw auto;
+  }
+  .lightBg .for-background{
+    background: url('./images/bg-mobile-light.jpg');
+    background-size: 100vw auto;
+  }
+}
+@media screen and (max-width: 375px) {
+  .darkBg .for-background,
+  .lightBg .for-background{
+    background-size: 375px auto;
+  }
 }
